fix line display when textarea text is too long

--- a/style/index.less
+++ b/style/index.less
@@ -50,3 +50,12 @@ body {
   padding: 0 10px;
   overflow-y: scroll;
 }
+
+#ruler {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  display: inline-block;
+  padding: 0 5px;
+  white-space: nowrap;
+}
